--- a/src/app.html
+++ b/src/app.html
@@ -34,6 +34,13 @@
 		
 		<!-- Fonts -->
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
+
+		<!-- Privacy-friendly analytics by Plausible -->
+		<script async src="https://plausible.io/js/pa-B4wRtyUZB0VKJ1Bw6qEjq.js"></script>
+		<script>
+		window.plausible=window.plausible||function(){(plausible.q=plausible.q||[]).push(arguments)},plausible.init=plausible.init||function(i){plausible.o=i||{}};
+		plausible.init()
+		</script>
 		
 		%sveltekit.head%
 	</head>
